# GameMathLib

./: .gitignore  CMakeLists.txt  README.md
examples/: example_basic.cpp
include/gamemath/: Collision.h  Matrix3x3.h  Vector2D.h  Vector3D.h
tests/: test_math.cpp  test_vector2d.cpp
